--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "firebase": "^8.1.2",
     "react": "^17.0.1",
